# actix-web-x-protobuf-example

./: Cargo.toml  Dockerfile  Makefile
client/: Pipfile  test.py
proto_files/: test.proto  test_with_rust_ext.proto
src/: custom_serde.rs  handler.rs  main.rs  server.rs
